deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spruce-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: spruce
  ports:
    - name: https
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spruce
spec:
  selector:
    app.kubernetes.io/name: spruce
  ports:
    - name: https
      port: 8080
      targetPort: https
